# seadas_kosc

./: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  tags
src/ancnrt/: ANCroutines.c  CMakeLists.txt  Changelog.md  Makefile.aquarius  anc_seaice.c  anc_seaice.mk  ancil.h  ancnrt.c  ancnrt.mk  ancnrt_2p5.c  ancnrt_aquarius.c  ancnrt_aquarius.mk  ancnrt_proto.h  countann.c  epochbk.c  fill_smooth.c  fillenv.c  getfn.f  gregor.f  interp_hycom.f  interp_hycom_ascii.f  julday.f  julian.f  leap.f  lnstrg.f  metnrt.c  mk_smooth_ice_map.f  o3_toms.c  o3_toms.h  o3nrt_omi.c  o3nrt_omi.mk  pexit.c  rd_toms_ascii.c  rdattr.c  rdfiles.f  rdgrid.f  rdsdsid.c  readgrib.c  readgrib.f  resize_oz.c  (+15 more)
src/atm_tb_aquarius/: CMakeLists.txt  Changelog.md  atm_tb_aquarius.f
src/atteph_info_modis/: CMakeLists.txt  Changelog.md  atteph_info_modis.c
src/geocheck_modis/: CMakeLists.txt  Changelog.md  geocheck_modis.c
src/geogen_hico/: ASTREDUC.FOR  ASTTIME.f  CMakeLists.txt  Changelog.md  HAZEL.f90  JULIAN.f90  README_hico_igm.txt  SOLCOR.f90  SUNCOR.f90  astmath.cmn  astreduc.cmn  auxtools.f90  bore_site.f90  chartools.f90  check_range.f90  default_character_length.f90  ecef2latlon.f90  envi_header.f90  errors.f90  file_io_new.f90  generic_info.f90  get_astro_data.f90  intercept.f90  makefile  params.f90  proc_hico.f90  q_to_r.f90  solar_geometry.f90  write_envi_header.f90
src/geogen_modis/: CMakeLists.txt  Changelog.md  GEO_DEM.c  GEO_DEM.h  GEO_abs_limit_check.c  GEO_aggregate.c  GEO_basic.h  GEO_check_ea_headers.c  GEO_create_swath.c  GEO_del_limit_check.c  GEO_derived_products.c  GEO_earth.h  GEO_earth_location.c  GEO_ellip_position.c  GEO_ephem_attit.c  GEO_find_next_flag.c  GEO_geo.h  GEO_get_GRing_points.c  GEO_get_T_inst2ecr.c  GEO_get_bounding_coords.c  GEO_get_ephatt_inputs.c  GEO_get_geoid.c  GEO_get_inst_mirr_normal.c  GEO_get_sample_time.c  GEO_get_utcpole_metadata.c  GEO_get_version_metadata.c  GEO_get_view_vec.c  GEO_global_arrays.h  GEO_hires.c  GEO_initialize_product.c  GEO_input.h  GEO_inst.h  GEO_interp_ECR.c  GEO_interp_mirr_ang.c  GEO_interp_mirr_enc.c  GEO_landsea_mask.c  GEO_locate_one_granule.c  GEO_locate_one_scan.c  GEO_location_main.c  GEO_main.h  (+45 more)
src/get_product_info/: CMakeLists.txt  Changelog.md  get_product_info.c
src/hico_utils/: CMakeLists.txt  hico.h  hico_L0_hdr_echo.c  hico_hs.h  hico_hs_stats.c  time_offset.c
src/ice2hdf/: CMakeLists.txt  Changelog.md  README  ice2hdf.c  ice2hdf.mk
src/l0chunk_modis/: CMakeLists.txt  Changelog.md  l0chunk_modis.c
src/l0cnst_write_modis/: CMakeLists.txt  Changelog.md  l0cnst_write_modis.c
src/l0fix_modis/: CMakeLists.txt  Changelog.md  l0fix_modis.c
src/l0regen_seawifs/: CMakeLists.txt  Changelog.md  main_l0regen.c
src/l1aextract_modis/: CMakeLists.txt  Changelog.md  MODll2snpx.c  MODll2snpx.mk  l1aextract_modis.c  l1aextract_modis.mk
src/l1aextract_seawifs/: CMakeLists.txt  Changelog.md  extract_sub.c  main_l1aextract.c  regen.h  regen_attr.h  regen_proto.h
src/l1agen_modis/: CMakeLists.txt  Changelog.md  EN_eng_data.h  FP_failed_pkt_queue.h  L1A_datatype_to_DFNT.c  L1A_prototype.h  MD_metadata.h  MODIS_35005.t  MS_misc.h  PC_pcf_info.h  PD_pkt_data.h  PGS_MODIS_35005.h  PH_pkt_hdr.h  SC_scan.h  VU_vdata_utility.h  accumulate_failed_packets.c  attached_Vdata_counter.c  check_checksum.c  close_Vdata.c  close_processing_run.c  compute_SD_start_time.c  compute_global_time_offsets.c  create_L1A_granule.c  create_Vdata.c  create_Vdata_field.c  create_eng_data_vdata_array.c  create_eng_data_vdata_array_field.c  create_missing_scans.c  dequeue.c  end_Vdata_access_to_file.c  end_eng_data_access_to_file.c  enqueue.c  equal_strings.c  extr_bits.c  finalize_pixel_qual_data.c  finalize_scan_metadata.c  forget.c  free_queue.c  get_empty_slot.c  get_index.c  (+68 more)
src/l1agen_seawifs/: CMakeLists.txt  Changelog.md  Changes  HOW_TO_UPDATE_ORBIT_TABLE  getl0indx.c  getl0scene.c  getl0scene_nav.c  getl1rec.c  getmetrics.c  getnavdata.c  getorbdata.c  getorbnum.c  input_s.h  instlm.c  instlm.h  l0info_seawifs.mk  l0merge_seawifs.mk  l1agen_seawifs.mk  main_l0info.c  main_l0merge.c  main_l1agen.c  mkmeta.c  navblk_s.h  navctl_s.h  navqc_s.h  orbit_s.h  printindx.c  printnav.c  printscene.c  swl0_parms.h  swl0_proto.h  swl0_struc.h  swl0_types.h  swl0_utils.c  swl0_utils.h  swl1_hdf.c  swl1_hdf.h  swl1_struc.h  temporal_anomaly.c  test_l1agen_seawifs_config.cmake  (+1 more)
src/l1asubset_modis/: CMakeLists.txt  Changelog.md  l1asubset_modis.c
src/l1bextract_meris/: CMakeLists.txt  Changelog.md  EnvsatDSD.cpp  EnvsatDSD.h  EnvsatDSR.cpp  EnvsatDSR.h  EnvsatFile.cpp  EnvsatFile.h  EnvsatMPH.cpp  EnvsatMPH.h  EnvsatSPH.cpp  EnvsatSPH.h  EnvsatUtil.cpp  EnvsatUtil.h  FlagsDSR.cpp  FlagsDSR.h  MeasurementDSR.cpp  MeasurementDSR.h  MerisSPH.cpp  MerisSPH.h  RadianceDSR.cpp  RadianceDSR.h  TiepointDSR.cpp  TiepointDSR.h  l1bextract_meris.cpp
src/l1bgen_modisa/: CMakeLists.txt  Changelog.md  Emissive_Cal.c  Emissive_Cal.h  FNames.h  Granule.c  Granule.h  GranuleP.h  HDF_Lib.c  HDF_Lib.h  L1B.c  L1B_Setup.c  L1B_Setup.h  L1B_SetupP.h  L1B_Tables.c  L1B_Tables.h  MODIS_36110.t  Metadata.c  Metadata.h  MetadataP.h  PGS_Error_Codes.h  PGS_MODIS_36110.h  Preprocess.c  Preprocess.h  PreprocessP.h  Reflective_Cal.c  Reflective_Cal.h  Reflective_CalP.h  error_messages.txt
src/l1bgen_modist/: CMakeLists.txt  Changelog.md  Emissive_Cal.c  Emissive_Cal.h  FNames.h  Granule.c  Granule.h  GranuleP.h  HDF_Lib.c  HDF_Lib.h  L1B.c  L1B_Setup.c  L1B_Setup.h  L1B_SetupP.h  L1B_Tables.c  L1B_Tables.h  MODIS_36100.t  Metadata.c  Metadata.h  MetadataP.h  PGS_Error_Codes.h  PGS_MODIS_36100.h  Preprocess.c  Preprocess.h  PreprocessP.h  Reflective_Cal.c  Reflective_Cal.h  Reflective_CalP.h  error_messages.txt
src/l1info_aquarius/: CMakeLists.txt  Changelog.md  l1info_aquarius.cpp  l1info_aquarius.h
src/l2bin/: CMakeLists.txt  Changelog.md  cdata.h  dataday.c  dataday.h  l2bin.c  l2bin.mk  l2bin_input.c  l2bin_input.h  query_disc_wrapper.f90  swfnav.h
src/l2bin_aquarius/: CMakeLists.txt  Changelog.md  l2bin_aquarius.cpp  l2bin_aquarius.h
src/l2gen/: Changes  (+103 more)
(+2316 files in other folders)
