cmake_minimum_required(VERSION 2.6)

# NOTE, the order matters... when adding new code, put elements that depend on
# others AFTER the dependency! (e.g. libbin needs libhdfutils, so libhdfutils
# goes first...)

project(OCSSW)

# libraries
add_subdirectory(lib24to8)
add_subdirectory(libanc)
add_subdirectory(libnav)
add_subdirectory(libczcs)
add_subdirectory(libgenutils)
add_subdirectory(libhdf4utils)
add_subdirectory(libhdf5utils)
add_subdirectory(libnetcdfutils)
add_subdirectory(libtimeutils)
add_subdirectory(libbin)
add_subdirectory(libbin++)
add_subdirectory(libl2)
add_subdirectory(libmap)
add_subdirectory(libmeris)
add_subdirectory(libgoci)
add_subdirectory(libseawifs)
add_subdirectory(libswfnav)
add_subdirectory(libosmi)
add_subdirectory(liboli)
add_subdirectory(libpiutils)
add_subdirectory(libdfutils)
# Common progs
add_subdirectory(l2gen)
add_subdirectory(l2gen_kosc)
add_subdirectory(l2brsgen)
add_subdirectory(l2bin)
add_subdirectory(l3bin)
add_subdirectory(l1aextract_modis)
add_subdirectory(l1aextract_seawifs)
add_subdirectory(l1bextract_meris)
add_subdirectory(smigen)
add_subdirectory(l2extract)
add_subdirectory(l2mapgen)
add_subdirectory(smitoppm)
add_subdirectory(l3bindump)
add_subdirectory(get_product_info)
add_subdirectory(l3mapgen)
# MODIS-specific
add_subdirectory(l1agen_modis)
add_subdirectory(l1bgen_modist)
add_subdirectory(l1bgen_modisa)
add_subdirectory(geogen_modis)
add_subdirectory(l0fix_modis)
add_subdirectory(l0cnst_write_modis)
add_subdirectory(l0chunk_modis)
add_subdirectory(l1asubset_modis)
add_subdirectory(atteph_info_modis)
add_subdirectory(geocheck_modis)
add_subdirectory(pdsmerge)
# VIIRS-specific
if (BUILD_VIIRS_L1)
  add_subdirectory(l1agen_viirs)
  add_subdirectory(l0qc_viirs)
  add_subdirectory(l2qc_viirs)
  add_subdirectory(libVL1control)
  add_subdirectory(libSGP4)
  add_subdirectory(libViirsL1BCal)
  add_subdirectory(libViirsCmn)
  add_subdirectory(libViirsGeo)
  add_subdirectory(libnovas)
  add_subdirectory(calibrate_viirs)
  add_subdirectory(geolocate_viirs)
  add_subdirectory(viirs_obc)
endif (BUILD_VIIRS_L1)

#add_subdirectory(nccmp)
# add_subdirectory(atrem)
if (BUILD_MISC)
    add_subdirectory(l0cnst_read_modis)
# Ancillary-specific
add_subdirectory(met_reverse)
add_subdirectory(auto_qc)
add_subdirectory(oisst_info)
add_subdirectory(ancnrt)
#add_subdirectory(ice2hdf)
#  Miscellaneous
add_subdirectory(landbin)
add_subdirectory(bindepths)
add_subdirectory(biosmap)
add_subdirectory(hico_utils)
add_subdirectory(geogen_hico)
add_subdirectory(hicoENVI)
#  add_subdirectory(l3despeckle)
add_subdirectory(val_extract)
# add_subdirectory(atrem)
endif(BUILD_MISC)

if (BUILD_AQUARIUS)
    add_subdirectory(libaquarius)
    add_subdirectory(libaqgeo)
    add_subdirectory(libaqsss)
    if(BUILD_JPL)
      add_subdirectory(libscatterutils)
      add_subdirectory(libaqscatter)
    endif(BUILD_JPL)
    add_subdirectory(atm_tb_aquarius)
    add_subdirectory(l0gen_aquarius)
    add_subdirectory(l1agen_aquarius)
    add_subdirectory(l1amerge_aquarius)
    add_subdirectory(l1info_aquarius)
    add_subdirectory(l2bin_aquarius)
    add_subdirectory(l2gen_aquarius)
    add_subdirectory(mk_aquarius_ancillary_data)
    add_subdirectory(orbgen_aquarius)
endif(BUILD_AQUARIUS)

if (BUILD_AHMAD_FRASER)
    add_subdirectory(afocn)
    add_subdirectory(afphs)
    add_subdirectory(afrt1)
    add_subdirectory(afrt2)
endif(BUILD_AHMAD_FRASER)

if (BUILD_HISTORICAL)
    add_subdirectory(l1agen_czcs)
#    add_subdirectory(l1agen_seawifs)
    add_subdirectory(orbnum_seawifs)
    add_subdirectory(gpsextract_seawifs)
    add_subdirectory(interpnav_seawifs)
    add_subdirectory(navassess_seawifs)
    add_subdirectory(neb2raw_seawifs)
    add_subdirectory(raw2l0_seawifs)
    add_subdirectory(ql02raw_seawifs)
    add_subdirectory(tlmgen_seawifs)
    add_subdirectory(l0regen_seawifs)
    add_subdirectory(viirs_sim_sdr)
    add_subdirectory(modis_timestamp)
endif(BUILD_HISTORICAL)
